Many select controls don't work on Leopard. b=400082 r=joshmoz sr=roc a=dveditz